Fix the misaligned margins

--- a/css/main.css
+++ b/css/main.css
@@ -17,18 +17,18 @@ body {
 header {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1.8rem 1fr 1.5rem 2.5rem;
+  grid-template-rows: 2.5rem 1fr 1.5rem 2.5rem;
   gap: .75rem;
 }
 
 header h1 {
-  margin: 1rem 1.5rem;
+  margin: 0 1.5rem;
   font-size: 1.8rem;
   font-weight: normal;
   font-style: italic;
   grid-column: 1 / -1;
   grid-row: 1;
-  align-self: center;
+  align-self: start;
 }
 
 img {
